// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddAssetSearch.vue [Empty Search Input]: should be rendered correctly 1`] = `
<div
  class="asset-search"
>
  <s-input-stub
    accept=""
    autocomplete="off"
    borderradius="small"
    class="asset-search-input"
    form=""
    label=""
    maxlength="100"
    name=""
    placeholder="Filter by Asset ID, Name or Ticker Symbol"
    prefix="s-icon-search-16"
    rows="2"
    size="big"
    suffix=""
    tabindex=""
    type="text"
    usedesignsystem="true"
    value=""
  />
   
  <s-scrollbar
    class="asset-list asset-search-list"
  >
    <!---->
     
    <div
      class="asset s-flex"
    >
      <i
        class="asset-logo asset-default s-icon-notifications-info-24"
      />
       
      <div
        class="asset-description s-flex"
      >
        <div
          class="asset-symbol"
        >
          TEST
        </div>
         
        <div
          class="asset-info"
        >
          
      Test Asset
      
          <s-tooltip
            content="Copy Asset ID"
          >
            <span
              class="asset-id"
            >
              (0x021...00000)
            </span>
          </s-tooltip>
        </div>
         
      </div>
       
    </div>
     
    <!---->
  </s-scrollbar>
</div>
`;

exports[`AddAssetSearch.vue [No Tokens Found]: should be rendered correctly 1`] = `
<div
  class="asset-search"
>
  <s-input-stub
    accept=""
    autocomplete="off"
    borderradius="small"
    class="asset-search-input"
    form=""
    label=""
    maxlength="100"
    name=""
    placeholder="Filter by Asset ID, Name or Ticker Symbol"
    prefix="s-icon-search-16"
    rows="2"
    size="big"
    suffix=""
    tabindex=""
    type="text"
    usedesignsystem="true"
    value="123456"
  />
   
  <s-scrollbar
    class="asset-list asset-search-list"
  >
    <div
      class="asset-list-empty"
    >
      
      No tokens found
    
    </div>
     
  </s-scrollbar>
</div>
`;

exports[`AddAssetSearch.vue [Token is Found]: should be rendered correctly 1`] = `
<div
  class="asset-search"
>
  <s-input-stub
    accept=""
    autocomplete="off"
    borderradius="small"
    class="asset-search-input"
    form=""
    label=""
    maxlength="100"
    name=""
    placeholder="Filter by Asset ID, Name or Ticker Symbol"
    prefix="s-icon-search-16"
    rows="2"
    size="big"
    suffix=""
    tabindex=""
    type="text"
    usedesignsystem="true"
    value="TEST"
  />
   
  <s-scrollbar
    class="asset-list asset-search-list"
  >
    <!---->
     
    <div
      class="asset s-flex"
    >
      <i
        class="asset-logo asset-default s-icon-notifications-info-24"
      />
       
      <div
        class="asset-description s-flex"
      >
        <div
          class="asset-symbol"
        >
          TEST
        </div>
         
        <div
          class="asset-info"
        >
          
      Test Asset
      
          <s-tooltip
            content="Copy Asset ID"
          >
            <span
              class="asset-id"
            >
              (0x021...00000)
            </span>
          </s-tooltip>
        </div>
         
      </div>
       
    </div>
     
    <!---->
  </s-scrollbar>
</div>
`;
